# zero2prod

./: .env  Cargo.toml  Dockerfile  README.md  spec.yaml  sqlx-data.json
.cargo/: config.toml
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
migrations/: 20230421133510_create_subscriptions_table.sql  20230428173227_add_status_to_subscriptions.sql  20230428174444_make_status_not_null_in_subscriptions.sql  20230428175810_create_subscription_tokens_table.sql  20230505013615_create_users_table.sql  20230505021351_rename_password_column.sql  20230505024441_add_salt_to_users.sql  20230505030648_remove_salt_from_users.sql  20230508134804_seed_user.sql  20230523021804_change_admin_password.sql  20230527031527_create_idempotency_table.sql  20230527195900_relax_null_checks_on_idempotency.sql  20230528173638_create_issue_delivery_queue_table.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: mod.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
src/routes/newsletter/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
