[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Steven Lotito <steven.lotito@alumni.pitt.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
config = "0.13.3"
reqwest = "0.11.16"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.3.1", features = ["v4"] }

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
