[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Steven Lotito <steven.lotito@alumni.pitt.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
actix-web = "4.3.1"
anyhow = { version = "1.0.71", features = ["backtrace"] }
base64 = "0.21.0"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
claims = "0.7.1"
config = "0.13.3"
once_cell = "1.17.1"
rand = { version = "0.8.5", features = ["std_rng"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
serde-aux = "4.2.0"
sha3 = "0.8"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.4"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = [
    "registry",
    "env-filter",
] }
unicode-segmentation = "1.10.1"
uuid = { version = "1.3.1", features = ["v4"] }
validator = "0.16.0"

[dependencies.reqwest]
version = "0.11.16"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dev-dependencies]
fake = "2.5.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
tokio = { version = "1", features = ["macros", "rt"] }
wiremock = "0.5"
serde_json = "1"
linkify = "0.9.0"
